# varre

./: .codexignore  .gitignore  Cargo.toml  Makefile  README.md
.claude/: settings.json
plans/: 2026-03-12-feat-varre-tmux-claude-orchestrator-plan.md
src/: cli.rs  config.rs  error.rs  main.rs  monitor.rs
src/backend/: cli.rs  mock.rs  mod.rs
src/jsonl/: mod.rs
src/orchestrator/: mod.rs
src/queue/: job.rs  mod.rs  runner.rs
src/session/: event.rs  interactive.rs  mod.rs  state.rs
src/tmux/: detection.rs  mod.rs  scanner.rs
src/tui/: app.rs  event.rs  mod.rs  session_manager.rs  ui.rs
