[package]
name = "varre"
version = "0.1.0"
edition = "2021"
description = "Multi-session Claude Code orchestrator with dual-mode execution, queue-based task runner, and interactive TUI"
license = "MIT"
rust-version = "1.75"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

# Unix signal handling
[target.'cfg(unix)'.dependencies]
libc = "0.2"
